--- a/src/CodedPizza.Web/CodedPizza.Web.csproj
+++ b/src/CodedPizza.Web/CodedPizza.Web.csproj
@@ -238,6 +238,12 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CodedPizza.Data\CodedPizza.Data.csproj">
+      <Project>{0ee5fad7-8459-4763-9454-7380a34e5b16}</Project>
+      <Name>CodedPizza.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
