--- a/src/CodedPizza.Domain/CodedPizza.Domain.csproj
+++ b/src/CodedPizza.Domain/CodedPizza.Domain.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Person.cs" />
-    <Compile Include="Session.cs" />
+    <Compile Include="PizzaSession.cs" />
     <Compile Include="Topic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
